notes and scraped data able to add and delete notes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,19 +4,12 @@
   <title>My Scraping App</title>
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
 </head>
 <body>
-  <div class="container">
-    <div class="row">
-      <div class="col m5 offset-m2 scraped">
-       <p>hello</p>
-      </div>
-      <div class="col m3 notes">
-        <p>yo</p>
-      </div>
-    </div>
-  </div>
+{{{ body }}}
 
 
 
@@ -29,5 +22,6 @@
   <script src="https://code.jquery.com/jquery-2.2.1.min.js" integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00=" crossorigin="anonymous"></script>
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+  <script src="/js/app.js"></script>
 </body>
 </html>
